[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/cells/bad_molecule.png" type="Texture" id=1]
[ext_resource path="res://BadMolecule.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=2]
radius = 15.0
height = 0.0

[sub_resource type="CircleShape2D" id=3]
radius = 11.5175

[node name="BadMolecule" type="KinematicBody2D" groups=["Carcinogens"]]
position = Vector2( 69, 59 )
scale = Vector2( 1.4, 1.4 )
collision_layer = 2
collision_mask = 4
script = ExtResource( 2 )

[node name="BadMoleculeImage" type="Sprite" parent="."]
position = Vector2( -2, 3 )
scale = Vector2( 0.0529247, 0.0529247 )
texture = ExtResource( 1 )

[node name="ClickArea" type="Area2D" parent="."]

[node name="ClickCollisionShape" type="CollisionShape2D" parent="ClickArea"]
position = Vector2( -2, 2 )
rotation = -0.440593
shape = SubResource( 2 )

[node name="CollisionShapeAgainstWalls" type="CollisionShape2D" parent="."]
position = Vector2( -1.42856, 2.14286 )
shape = SubResource( 3 )

[connection signal="body_entered" from="ClickArea" to="." method="_on_Area2D_body_entered"]
[connection signal="input_event" from="ClickArea" to="." method="_on_Area2D_input_event"]
